2006-07-23  Benoît Dejean  <benoit@placenet.org>

	* diff_patch.cc (hunk_consumer::find_encloser): Added missing parents.
	Fixed warning.

2006-07-23  Matthew Gregan  <kinetik@orcon.net.nz>

	* tests/automate_tags/__driver__.lua: Fix test on Win32 (globs vs
	quoting).

2006-07-22  Nathaniel Smith  <njs@pobox.com>

	* NEWS: Set date, and it turns out AUTOMATE() was there in
	0.27...

2006-07-21  Nathaniel Smith  <njs@pobox.com>

	* AUTHORS: Add Thomas Moschny and Zack Weinberg.

	* UPGRADE, monotone.spec, visualc/config.h, win32/monotone.iss:
	* debian/changelog: Bump to version 0.28.

2006-07-21  Nathaniel Smith  <njs@pobox.com>

	* monotone.texi (Workspace): Make the Warnings about pluck more
	Dire.

2006-07-21  Nathaniel Smith  <njs@pobox.com>

	* NEWS: Update for 0.28.
	* tests/netsync_over_pipes/__driver__.lua: Remove no-longer-needed
	--debug.

2006-07-21  Nathaniel Smith  <njs@pobox.com>

	* roster.cc (print_to): It is perfectly valid to have an attr set
	to the empty string (which is why we have whole "full_attr"
	annoyance).  Remove incorrect I().

2006-07-21  Nathaniel Smith  <njs@pobox.com>

	* roster.cc (check_restricted_cset, editable_roster_for_check):
	Tweak comments.

2006-07-21  Nathaniel Smith  <njs@pobox.com>

	* configure.ac: Go ahead and bump the version number, to make
	distcheck happy.

2006-07-21  Derek Scherger  <derek@echologic.com>

	* roster.cc (mark_roster_with_one_parent): remove std:: prefix
	(editable_roster_for_check): new class for checking cset
	application
	(check_restricted_cset): convert check to use cset.apply_to with
	editable_roster_for_check
	* tests/restrictions_with_deletes: un-xfail
	* tests/restrictions_with_renames_and_adds: un-xfail

2006-07-21  Thomas Moschny  <thomas.moschny@gmx.de>

	* monotone.texi: Document command aliases 'mv', 'ci' and 'ls',
	motivated by savannah bug report #16923.

2006-07-20  Matt Johnston  <matt@ucc.asn.au>

	* monotone.texi: avoid "to to".

2006-07-20  Zack Weinberg  <zackw@panix.com>
